# notifications_sprint_1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  system-diagrams.md
.github/workflows/: pre-pull-request.yml
fake_auth_service/: Dockerfile  entrypoint.sh  main.py
infra/: .env.example  docker-compose-dev.yml  docker-compose.yml
notification_processor/: Dockerfile  requirements.txt
notification_processor/src/: main.py
notification_processor/src/api/: health.py
notification_processor/src/config/: .env.example  logging.py  settings.py
notification_processor/src/models/: notification.py  template.py
notification_processor/src/processors/: notification_processor.py  template_processor.py
notification_processor/src/schemas/: notification_schemas.py
notification_processor/src/services/: auth_service.py  consumer.py  notification_service.py  producer.py  template_processor.py
notification_processor/src/templates/: __init__.py  jinja_template.py
notifications_admin/: Dockerfile  requirements.txt
notifications_admin/src/: alembic.ini  entrypoint.sh  main.py
notifications_admin/src/alembic/: env.py
notifications_admin/src/api/: router.py
notifications_admin/src/core/: .env.example  config.py  init_db.py  logger.py
notifications_admin/src/db/: postgres.py
notifications_api/: Dockerfile  entrypoint.sh  requirements.txt
notifications_api/src/: main.py  rabbit_test.py
notifications_worker/: .dockerignore  Dockerfile  requirements.txt
notifications_worker/src/: main.py  publisher.py
(+55 files in other folders)
